# redesigned-computing-machine

./: .clang-format  .gitignore  CMakeLists.txt  FUTURISTIC_DEVOPS.md  README.md
.github/workflows/: cmake-multi-platform.yml  code-coverage.yml  format.yml  lint.yml  release.yml
